--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h1 class="display-5 mt-3 mb-5">Login</h1>
   <div class="row">
     <div class="col-12 col-lg-6">
@@ -24,3 +24,4 @@
     </div>
   </div>
 </div>
+ -->
