--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
 
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+$custom-colors: (
+  "background": #f5f5f5,
+  "blu": #035476ee,
+  "verde": #a9edc4,
+  "rosso": #f34f44,
+  "secondary": #ece0d5,
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
+@import "bootstrap/scss/bootstrap";
+
+* {
+  font-family: "Ubuntu Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
