--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ $custom-colors: (
   "blu": #035476ee,
   "verde": #a9edc4,
   "rosso": #f34f44,
-  "secondary": #ece0d5,
+  "secondarybg": #ece0d5,
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
@@ -18,4 +18,63 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
+}
+
+button {
+  position: relative;
+  height: 50px;
+  padding: 0 30px;
+  border: 2px solid #000;
+  background: #f5f5f5;
+  user-select: none;
+  white-space: nowrap;
+  transition: all 0.05s linear;
+  font-family: inherit;
+}
+
+button:before,
+button:after {
+  content: "";
+  position: absolute;
+  background: #f5f5f5;
+  transition: all 0.2s linear;
+}
+
+button:before {
+  width: calc(100% + 6px);
+  height: calc(100% - 16px);
+  top: 8px;
+  left: -3px;
+}
+
+button:after {
+  width: calc(100% - 16px);
+  height: calc(100% + 6px);
+  top: -3px;
+  left: 8px;
+}
+
+button:hover {
+  cursor: crosshair;
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+button:hover:before {
+  height: calc(100% - 32px);
+  top: 16px;
+}
+
+button:hover:after {
+  width: calc(100% - 32px);
+  left: 16px;
+}
+
+button span {
+  font-size: 15px;
+  z-index: 3;
+  position: relative;
+  font-weight: 600;
 }
