--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,62 @@
-<!-- <div class="container">
-  <h1 class="display-5 mt-3 mb-5">Login</h1>
-  <div class="row">
-    <div class="col-12 col-lg-6">
-      <form>
-        <input
-          type="text"
-          class="form-control mb-3 border-black"
-          placeholder="Username"
-          name="username"
-          [(ngModel)]="formData.username"
-        />
-        <input
-          type="password"
-          class="form-control mb-3 border-black"
-          placeholder="Password"
-          name="password"
-          [(ngModel)]="formData.password"
-        />
-        <button (click)="login()" class="btn rounded-5 btn-outline-success">
-          Accedi
-        </button>
-      </form>
+<div class="container">
+  <h5 class="mb-5 mt-3 text-center">Enter your credentials here.</h5>
+  <form [formGroup]="form" (ngSubmit)="login()">
+    <div class="row justify-content-center">
+      <div class="col-10 col-md-6">
+        <div class="d-flex flex-column align-items-center">
+          <div class="input-wrapper mb-3">
+            <input
+              id="username"
+              formControlName="username"
+              type="text"
+              placeholder="Your Username"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('username')?.invalid && form.get('username')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter your username!
+            </div>
+          </div>
+
+          <div class="input-wrapper mb-3">
+            <input
+              id="password"
+              formControlName="password"
+              type="password"
+              placeholder="Your Password"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('password')?.invalid && form.get('password')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter your password!
+            </div>
+          </div>
+
+          <button class="custom-button border-blu m-4">
+            <span class="text-blu"> Log In </span>
+          </button>
+
+          <ngb-alert
+            *ngIf="alertMessage"
+            [type]="alertType"
+            (close)="clearAlert()"
+            [dismissible]="true"
+            class="rounded-0"
+          >
+            {{ alertMessage }}
+          </ngb-alert>
+        </div>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
- -->
