--- a/src/app/auth/register-professional/register-professional.component.html
+++ b/src/app/auth/register-professional/register-professional.component.html
@@ -1,232 +1,285 @@
 <div class="container">
   <h5 class="mb-5 mt-3 text-center">
-    Please insert your informations and get ready to share your story
+    Please enter your informations and get ready to share your story
   </h5>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="row justify-content-center">
-      <div class="col-10 col-md-4">
-        <div class="mb-3">
-          <input
-            id="name"
-            formControlName="name"
-            type="text"
-            placeholder="Your Name"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
-            class="text-rosso"
-          >
-            Please enter your name!
-          </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="surname"
-            formControlName="surname"
-            type="text"
-            placeholder="Your Surname"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="form.get('surname')?.invalid && form.get('surname')?.touched"
-            class="text-rosso"
-          >
-            Please enter your surname!
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="dateOfBirth" class="form-label">Your Date of Birth</label>
-          <input
-            id="dateOfBirth"
-            formControlName="dateOfBirth"
-            type="date"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('dateOfBirth')?.invalid &&
-              form.get('dateOfBirth')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter your date of birth!
-          </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="email"
-            formControlName="email"
-            type="email"
-            placeholder="Your E-mail"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
-            class="text-rosso"
-          >
-            Please enter a valid mail!
-          </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="username"
-            formControlName="username"
-            type="text"
-            placeholder="Enter a Username"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('username')?.invalid && form.get('username')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter a username!
-          </div>
-        </div>
+    <div class="row justify-content-center align-items-baseline">
+      <div class="col-10 col-md-6 col-lg-5 col-xl-4">
+        <div class="d-flex flex-column align-items-center">
+          <div class="input-wrapper mb-3">
+            <input
+              id="name"
+              formControlName="name"
+              type="text"
+              placeholder="Your Name"
+              class="input-box"
+            />
 
-        <div class="mb-3">
-          <input
-            id="password"
-            formControlName="password"
-            type="password"
-            placeholder="Enter a Password"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('password')?.invalid && form.get('password')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter a password!
+            <div
+              *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
+              class="text-rosso text-center"
+            >
+              Please enter your name!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <label for="profilePicture" class="form-label"
-            >Choose Your Profile Picture</label
-          >
-          <input
-            id="profilePicture"
-            type="file"
-            (change)="onFileSelected($event)"
-            class="form-control rounded-1 border-secondary bg-background"
-          />
+          <div class="input-wrapper mb-3">
+            <input
+              id="surname"
+              formControlName="surname"
+              type="text"
+              placeholder="Your Surname"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('surname')?.invalid && form.get('surname')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter your surname!
+            </div>
+          </div>
+          <div class="input-wrapper mb-3">
+            <label for="dateOfBirth" class="form-label"
+              >Your Date of Birth</label
+            >
+            <input
+              id="dateOfBirth"
+              formControlName="dateOfBirth"
+              type="date"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('dateOfBirth')?.invalid &&
+                form.get('dateOfBirth')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter your date of birth!
+            </div>
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="email"
+              formControlName="email"
+              type="email"
+              placeholder="Your E-mail"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
+              class="text-rosso text-center"
+            >
+              Please enter a valid mail!
+            </div>
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="username"
+              formControlName="username"
+              type="text"
+              placeholder="Enter a Username"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('username')?.invalid && form.get('username')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter a username!
+            </div>
+          </div>
+
+          <div class="input-wrapper mb-3">
+            <input
+              id="password"
+              formControlName="password"
+              type="password"
+              placeholder="Enter a Password"
+              class="input-box"
+            />
+
+            <div
+              *ngIf="
+                form.get('password')?.invalid && form.get('password')?.touched
+              "
+              class="text-rosso text-center"
+            >
+              Please enter a password!
+            </div>
+          </div>
+
+          <div class="d-flex flex-column mt-3">
+            <div class="d-flex align-items-center">
+              <label for="profilePicture" class="form-lable me-3"
+                >Profile Picture</label
+              >
+              <input
+                id="profilePicture"
+                type="file"
+                (change)="onFileSelected($event)"
+                class="hidden-input"
+              />
+
+              <button class="custom-button border-blu">
+                <label class="text-blu" for="profilePicture">Choose it</label>
+              </button>
+            </div>
+            <span *ngIf="fileName">{{ fileName }}</span>
+          </div>
         </div>
       </div>
 
-      <div class="col-10 col-md-6">
-        <div formArrayName="educationalPaths">
-          <h5>Your Educational Path</h5>
-          <div
-            *ngFor="
-              let educationalpath of educationalPaths.controls;
-              let i = index
-            "
-            [formGroupName]="i"
-            class=""
-          >
-            <div class="mb-3">
-              <select
-                id="university-{{ i }}"
-                formControlName="universityId"
-                class="form-select rounded-1 border-secondary bg-background"
-                (change)="onUniversityChange(i)"
-              >
-                <option value="">Select University</option>
-                <option *ngFor="let uni of universities" [value]="uni.id">
-                  {{ uni.name }}
-                </option>
-              </select>
-            </div>
-
-            <div class="mb-3">
-              <select
-                id="faculty-{{ i }}"
-                formControlName="facultyId"
-                class="form-select rounded-1 border-secondary bg-background"
-                (change)="onFacultyChange(i)"
-              >
-                <option value="">Select Faculty</option>
-                <option
-                  *ngFor="let faculty of facultiesOptions[i]"
-                  [value]="faculty.id"
-                >
-                  {{ faculty.name }}
-                </option>
-              </select>
-            </div>
-
-            <div class="mb-3">
-              <select
-                id="degreeCourse-{{ i }}"
-                formControlName="degreeCourseId"
-                class="form-select rounded-1 border-secondary bg-background"
-              >
-                <option value="">Select Degree Course</option>
-                <option
-                  *ngFor="let course of coursesOptions[i]"
-                  [value]="course.id"
-                >
-                  {{ course.name }}
-                </option>
-              </select>
-            </div>
-
-            <button
-              class="mb-3 border-rosso"
-              (click)="removeEducationalPath(i)"
+      <div class="col-10 col-md-6 col-lg-5 col-xl-4">
+        <div class="d-flex flex-column align-items-center mt-3 m-md-0">
+          <div formArrayName="educationalPaths">
+            <div
+              *ngFor="
+                let educationalpath of educationalPaths.controls;
+                let i = index
+              "
+              [formGroupName]="i"
+              class=""
             >
-              <span class="text-rosso"> Remove Educational Path </span>
-            </button>
+              <div class="input-wrapper mb-3">
+                <select
+                  id="university-{{ i }}"
+                  formControlName="universityId"
+                  class="input-box bg-background"
+                  (change)="onUniversityChange(i)"
+                >
+                  <option value="">Select University</option>
+                  <option *ngFor="let uni of universities" [value]="uni.id">
+                    {{ uni.name }}
+                  </option>
+                </select>
+              </div>
+
+              <div class="input-wrapper mb-3">
+                <select
+                  id="faculty-{{ i }}"
+                  formControlName="facultyId"
+                  class="input-box bg-background"
+                  (change)="onFacultyChange(i)"
+                >
+                  <option value="">Select Faculty</option>
+                  <option
+                    *ngFor="let faculty of facultiesOptions[i]"
+                    [value]="faculty.id"
+                  >
+                    {{ faculty.name }}
+                  </option>
+                </select>
+              </div>
+
+              <div class="input-wrapper mb-3">
+                <select
+                  id="degreeCourse-{{ i }}"
+                  formControlName="degreeCourseId"
+                  class="input-box bg-background"
+                >
+                  <option value="">Select Degree Course</option>
+                  <option
+                    *ngFor="let course of coursesOptions[i]"
+                    [value]="course.id"
+                  >
+                    {{ course.name }}
+                  </option>
+                </select>
+              </div>
+
+              <button
+                class="custom-button my-3 border-rosso"
+                (click)="removeEducationalPath(i)"
+              >
+                <span class="text-rosso">Remove</span>
+              </button>
+            </div>
           </div>
-        </div>
-
-        <button class="mb-3 border-blu" (click)="addEducationalPath()">
-          <span class="text-blu"> Add Another Educational Path </span>
-        </button>
-
-        <div class="mb-3">
-          <select
-            class="form-select rounded-1 border-secondary bg-background"
-            (change)="onSectorChange($event)"
-          >
-            <option value="">Select Sector</option>
-            <option *ngFor="let sector of sectorsList" [value]="sector.id">
-              {{ sector.name }}
-            </option>
-          </select>
-        </div>
-
-        <div class="mb-3">
-          <select
-            id="professionId"
-            formControlName="professionId"
-            class="form-select rounded-1 border-secondary bg-background"
-          >
-            <option value="">Select Your Profession</option>
-            <option
-              *ngFor="let profession of professionsList"
-              [value]="profession.id"
+          <div>
+            <button
+              class="custom-button mt-2 mb-3 border-blu"
+              (click)="addEducationalPath()"
             >
-              {{ profession.name }}
-            </option>
-          </select>
+              <span class="text-blu"> Add Path </span>
+            </button>
+
+            <div class="input-wrapper mb-3">
+              <select
+                class="input-box bg-background"
+                (change)="onSectorChange($event)"
+              >
+                <option value="">Select Sector</option>
+                <option *ngFor="let sector of sectorsList" [value]="sector.id">
+                  {{ sector.name }}
+                </option>
+              </select>
+            </div>
+
+            <div class="input-wrapper mb-3">
+              <select
+                id="professionId"
+                formControlName="professionId"
+                class="input-box bg-background"
+              >
+                <option value="">Select Profession</option>
+                <option
+                  *ngFor="let profession of professionsList"
+                  [value]="profession.id"
+                >
+                  {{ profession.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <button class="custom-button border-blu mt-3">
+            <span class="text-blu"> Register </span>
+          </button>
         </div>
-        <button class="border-blu">
-          <span class="text-blu"> Register </span>
-        </button>
       </div>
     </div>
   </form>
 </div>
 
-<ngb-alert
-  *ngIf="alertMessage"
-  [type]="alertType"
-  (close)="clearAlert()"
-  [dismissible]="true"
+<div
+  *ngIf="toastMessage"
+  class="toast-container position-fixed top-50 start-50 translate-middle p-3"
 >
-  {{ alertMessage }}
-</ngb-alert>
+  <div
+    class="toast show rounded-0"
+    role="alert"
+    aria-live="assertive"
+    aria-atomic="true"
+  >
+    <div class="toast-header bg-background rounded-0 border-0">
+      @if (response) {
+      <strong class="me-auto">Logged In!</strong>
+
+      } @if(!response){
+
+      <strong class="me-auto text-dark">Server Error!</strong>
+      }
+      <small class="text-dark">now</small>
+      <button
+        (click)="clearToast()"
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
+    </div>
+
+    <div
+      [ngClass]="response ? 'bg-verde text-dark' : 'bg-rosso text-white'"
+      class="toast-body rounded-0 border-0"
+    >
+      {{ toastMessage }}
+    </div>
+  </div>
+</div>
