--- a/src/app/auth/register-student/register-student.component.html
+++ b/src/app/auth/register-student/register-student.component.html
@@ -4,153 +4,198 @@
     path
   </h5>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="row justify-content-center">
-      <div class="col-10 col-sm-8 col-lg-4">
-        <div class="mb-3">
-          <input
-            id="name"
-            formControlName="name"
-            type="text"
-            placeholder="Your Name"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
-            class="text-rosso"
-          >
-            Please enter your name!
+    <div class="row justify-content-center align-items-baseline">
+      <div class="col-10 col-md-6 col-lg-5 col-xl-4">
+        <div class="d-flex flex-column align-items-center">
+          <div class="input-wrapper mb-3">
+            <input
+              id="name"
+              formControlName="name"
+              type="text"
+              placeholder="Your Name"
+              class="input-box"
+            />
+            <div
+              *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
+              class="text-rosso text-center"
+            >
+              Please enter your name!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="surname"
-            formControlName="surname"
-            type="text"
-            placeholder="Your Surname"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="form.get('surname')?.invalid && form.get('surname')?.touched"
-            class="text-rosso"
-          >
-            Please enter your surname!
+          <div class="input-wrapper mb-3">
+            <input
+              id="surname"
+              formControlName="surname"
+              type="text"
+              placeholder="Your Surname"
+              class="input-box"
+            />
+            <div
+              *ngIf="
+                form.get('surname')?.invalid && form.get('surname')?.touched
+              "
+              class="text-rosso"
+            >
+              Please enter your surname!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <label for="dateOfBirth" class="form-label">Your Date of Birth</label>
-          <input
-            id="dateOfBirth"
-            formControlName="dateOfBirth"
-            type="date"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('dateOfBirth')?.invalid &&
-              form.get('dateOfBirth')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter your date of birth!
+          <div class="input-wrapper mb-3">
+            <label for="dateOfBirth" class="form-label"
+              >Your Date of Birth</label
+            >
+            <input
+              id="dateOfBirth"
+              formControlName="dateOfBirth"
+              type="date"
+              class="input-box"
+            />
+            <div
+              *ngIf="
+                form.get('dateOfBirth')?.invalid &&
+                form.get('dateOfBirth')?.touched
+              "
+              class="text-rosso"
+            >
+              Please enter your date of birth!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="email"
-            formControlName="email"
-            type="email"
-            placeholder="Your E-mail"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
-            class="text-rosso"
-          >
-            Please enter a valid mail!
+          <div class="input-wrapper mb-3">
+            <input
+              id="email"
+              formControlName="email"
+              type="email"
+              placeholder="Your E-mail"
+              class="input-box"
+            />
+            <div
+              *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
+              class="text-rosso"
+            >
+              Please enter a valid mail!
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-10 col-sm-8 col-lg-4">
-        <div class="mb-3">
-          <input
-            id="username"
-            formControlName="username"
-            type="text"
-            placeholder="Enter a Username"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('username')?.invalid && form.get('username')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter a username!
+      <div class="col-10 col-md-6 col-lg-5 col-xl-4">
+        <div class="d-flex flex-column align-items-center">
+          <div class="input-wrapper mb-3">
+            <input
+              id="username"
+              formControlName="username"
+              type="text"
+              placeholder="Enter a Username"
+              class="input-box"
+            />
+            <div
+              *ngIf="
+                form.get('username')?.invalid && form.get('username')?.touched
+              "
+              class="text-rosso"
+            >
+              Please enter a username!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <input
-            id="password"
-            formControlName="password"
-            type="password"
-            placeholder="Enter a Password"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-          <div
-            *ngIf="
-              form.get('password')?.invalid && form.get('password')?.touched
-            "
-            class="text-rosso"
-          >
-            Please enter a password!
+          <div class="input-wrapper mb-3">
+            <input
+              id="password"
+              formControlName="password"
+              type="password"
+              placeholder="Enter a Password"
+              class="input-box"
+            />
+            <div
+              *ngIf="
+                form.get('password')?.invalid && form.get('password')?.touched
+              "
+              class="text-rosso"
+            >
+              Please enter a password!
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <label for="profilePicture" class="form-label"
-            >Choose Your Profile Picture</label
-          >
-          <input
-            id="profilePicture"
-            type="file"
-            (change)="onFileSelected($event)"
-            class="form-control rounded-1 border-blu border-2 bg-background"
-          />
-        </div>
-        <div class="mb-3">
-          <select
-            class="form-select rounded-1 border-blu border-2 bg-background"
-            (change)="onSectorSelected($event)"
-          >
-            <option value="">Select Your Interests</option>
-            <option *ngFor="let sector of sectorsList" [value]="sector.id">
-              {{ sector.name }}
-            </option>
-          </select>
+          <div class="d-flex flex-column my-3">
+            <div class="d-flex align-items-center">
+              <label for="profilePicture" class="form-lable me-3"
+                >Profile Picture</label
+              >
+              <input
+                id="profilePicture"
+                type="file"
+                (change)="onFileSelected($event)"
+                class="hidden-input"
+              />
 
-          <div class="mb-2">
-            <ng-container *ngFor="let sectorId of selectedSectors">
-              <span class="badge text-dark bg-verde mt-2 me-2">
-                {{ getSectorNameById(sectorId) }}
-                <button
-                  type="button"
-                  class="btn-close btn-close-dark btn-sm ms-1"
-                  (click)="removeSector(sectorId)"
-                ></button>
-              </span>
-            </ng-container>
+              <button class="custom-button border-blu">
+                <label class="text-blu" for="profilePicture">Choose it</label>
+              </button>
+            </div>
+            <span *ngIf="fileName">{{ fileName }}</span>
           </div>
+          <div class="input-wrapper mb-3">
+            <select
+              class="input-box bg-background"
+              (change)="onSectorSelected($event)"
+            >
+              <option value="">Select Your Interests</option>
+              <option *ngFor="let sector of sectorsList" [value]="sector.id">
+                {{ sector.name }}
+              </option>
+            </select>
+
+            <div class="my-2 d-flex justify-content-center flex-wrap">
+              <ng-container *ngFor="let sectorId of selectedSectors">
+                <span class="badge text-dark bg-verde me-2 mt-2 pb-2">
+                  {{ getSectorNameById(sectorId) }}
+                  <button
+                    type="button"
+                    class="btn-close btn-close-dark btn-sm ms-1"
+                    (click)="removeSector(sectorId)"
+                  ></button>
+                </span>
+              </ng-container>
+            </div>
+          </div>
+          <button class="custom-button border-blu mt-2">
+            <span class="text-blu"> Register </span>
+          </button>
         </div>
-        <button class="btn btn-verde rounded-1">Register</button>
       </div>
     </div>
   </form>
 
-  <ngb-alert
-    *ngIf="alertMessage"
-    [type]="alertType"
-    (close)="clearAlert()"
-    [dismissible]="true"
+  <div
+    *ngIf="toastMessage"
+    class="toast-container position-fixed top-50 start-50 translate-middle p-3"
   >
-    {{ alertMessage }}
-  </ngb-alert>
+    <div
+      class="toast show rounded-0"
+      role="alert"
+      aria-live="assertive"
+      aria-atomic="true"
+    >
+      <div class="toast-header bg-background rounded-0 border-0">
+        @if (response) {
+        <strong class="me-auto">Logged In</strong>
+
+        } @if(!response){
+
+        <strong class="me-auto text-dark">Server Error!</strong>
+        }
+        <small class="text-dark">now</small>
+        <button
+          (click)="clearToast()"
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="toast"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div
+        [ngClass]="response ? 'bg-verde text-dark' : 'bg-rosso text-white'"
+        class="toast-body rounded-0 border-0"
+      >
+        {{ toastMessage }}
+      </div>
+    </div>
+  </div>
 </div>
