--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ $custom-colors: (
   "background": #f5f5f5,
   "blu": #035476ee,
   "verde": #a9edc4,
-  "rosso": #f34f44,
+  "rosso": #e34444,
   "secondarybg": #ece0d5,
 );
 
@@ -20,61 +20,101 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   font-variation-settings: "wdth" 100;
 }
 
-button {
+.custom-button {
   position: relative;
   height: 50px;
-  padding: 0 30px;
   border: 2px solid #000;
   background: #f5f5f5;
+  -webkit-user-select: none;
   user-select: none;
   white-space: nowrap;
   transition: all 0.05s linear;
   font-family: inherit;
+  width: 85px;
 }
 
-button:before,
-button:after {
+.custom-button:before,
+.custom-button:after {
   content: "";
   position: absolute;
   background: #f5f5f5;
   transition: all 0.2s linear;
 }
 
-button:before {
+.custom-button:before {
   width: calc(100% + 6px);
   height: calc(100% - 16px);
   top: 8px;
   left: -3px;
 }
 
-button:after {
+.custom-button:after {
   width: calc(100% - 16px);
   height: calc(100% + 6px);
   top: -3px;
   left: 8px;
 }
 
-button:hover {
+.custom-button:hover {
   cursor: crosshair;
 }
 
-button:active {
+.custom-button:active {
   transform: scale(0.95);
 }
 
-button:hover:before {
+.custom-button:hover:before {
   height: calc(100% - 32px);
   top: 16px;
 }
 
-button:hover:after {
+.custom-button:hover:after {
   width: calc(100% - 32px);
   left: 16px;
 }
 
-button span {
+.custom-button span,
+.custom-button label {
   font-size: 15px;
   z-index: 3;
   position: relative;
   font-weight: 600;
+  cursor: crosshair;
+}
+
+//Input
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-bottom: 1rem;
+}
+
+.input-box {
+  font-size: 16px;
+  padding: 10px 0;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  color: #000000;
+  width: 100%;
+  background-color: transparent;
+  transition: border-color 0.3s ease-in-out;
+}
+
+.input-box:focus {
+  border-color: #035476ee;
+  outline: none;
+}
+
+.input-box:focus + .underline {
+  transform: scaleX(1);
+}
+
+//lo uso per eliminare l'input File che non è modificabile
+.hidden-input {
+  display: none;
+}
+
+input::placeholder {
+  color: #000000;
 }
