--- a/src/app/main-components/footer/footer.component.html
+++ b/src/app/main-components/footer/footer.component.html
@@ -1,1 +1,30 @@
-<p>footer works!</p>
+<div class="container-fluid mt-5">
+  <footer
+    class="d-flex border-top py-2 border-blu border-2 justify-content-between mx-sm-3 bg-background align-items-center justify-content-start"
+  >
+    <div class="d-flex align-items-center ms-2">
+      <a routerLink="/home">
+        <img class="bg-blu rounded-circle me-2" src="logo.png" alt="logo" />
+      </a>
+      <span class=" ">© 2025 HowToStart</span>
+    </div>
+
+    <ul class="nav me-2">
+      <li class="ms-3">
+        <a class="text-body-secondary" href="#"
+          ><i class="bi bi-twitter-x text-blu"></i
+        ></a>
+      </li>
+      <li class="ms-3">
+        <a class="text-body-secondary" href="#"
+          ><i class="bi bi-instagram text-blu"></i
+        ></a>
+      </li>
+      <li class="ms-3">
+        <a class="text-body-secondary" href="#"
+          ><i class="bi bi-facebook text-blu"></i
+        ></a>
+      </li>
+    </ul>
+  </footer>
+</div>
