--- a/src/app/auth/register-student/register-student.component.html
+++ b/src/app/auth/register-student/register-student.component.html
@@ -154,7 +154,7 @@
               </ng-container>
             </div>
           </div>
-          <button class="custom-button border-blu">
+          <button class="custom-button border-blu" [disabled]="form.invalid">
             <span class="text-blu"> Register </span>
           </button>
         </div>
