landing page wip

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,1 +1,10 @@
-<p>landing-page works!</p>
+<img src="pexels-amina-filkins-5561457.jpg" alt="" />
+<img src="pexels-amina-filkins-5561459.jpg" alt="" />
+<img src="pexels-cottonbro-9656476.jpg" alt="" />
+<img src="pexels-mart-production-8471955.jpg" alt="" />
+<img src="pexels-pavel-danilyuk-8294562.jpg" alt="" />
+<img src="pexels-pavel-danilyuk-8294683.jpg" alt="" />
+<img src="" alt="" />
+<img src="" alt="" />
+<img src="" alt="" />
+<img src="" alt="" />
