landing page wip

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h5 class="mb-5 mt-5 text-center">Enter your credentials here</h5>
+  <h4 class="mb-5 mt-5 text-center">Enter your credentials here</h4>
   <form [formGroup]="form" (ngSubmit)="login()">
     <div class="row justify-content-center">
       <div class="col-10 col-md-6 d-flex flex-column align-items-center">
@@ -49,7 +49,7 @@
             <span class="text-blu"> Log In </span>
           </button>
         </div>
-        <div class="d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-center mt-4">
           <small>Not registered yet? Register as</small>
           <div class="d-flex align-items-center justify-content-between">
             <button
