--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,10 +1,23 @@
-<img src="pexels-amina-filkins-5561457.jpg" alt="" />
-<img src="pexels-amina-filkins-5561459.jpg" alt="" />
-<img src="pexels-cottonbro-9656476.jpg" alt="" />
-<img src="pexels-mart-production-8471955.jpg" alt="" />
-<img src="pexels-pavel-danilyuk-8294562.jpg" alt="" />
-<img src="pexels-pavel-danilyuk-8294683.jpg" alt="" />
-<img src="" alt="" />
-<img src="" alt="" />
-<img src="" alt="" />
-<img src="" alt="" />
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-10 col-md-6 col-lg-5 mx-auto mt-auto">
+      <div class="d-flex flex-column align-items-center">
+        <h1 class="mb-5">
+          ...do you remember when you wanted to be an ASTRONAUT?
+        </h1>
+        <img src="pexels-amina-filkins-5561457.png" alt="" />
+      </div>
+    </div>
+    <div
+      class="d-none d-md-block col-md-6 col-lg-5 mx-auto text-center mt-auto"
+    >
+      <img src="pexels-amina-filkins-5561459.png" alt="" />
+    </div>
+    <div class="col-10 col-md-6">
+      <img src="pexels-mart-production-8471955-Photoroom.png" alt="" />
+    </div>
+    <div class="col-10 col-md-6">
+      <img src="pexels-cottonbro-9656476-Photoroom.png" alt="" />
+    </div>
+  </div>
+</div>
