--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,18 @@ $custom-colors: (
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
+
+// headings
+$h1-font-size: 3rem;
+$h2-font-size: 2.5rem;
+$h3-font-size: 2.1rem;
+$h4-font-size: 1.75rem;
+$h5-font-size: 1.5rem;
+$h6-font-size: 1.25rem;
+
+$font-size-base: 1rem;
+$font-size-small: 0.8rem;
+
 @import "bootstrap/scss/bootstrap";
 
 * {
@@ -17,7 +29,12 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-size: $font-size-base;
   font-variation-settings: "wdth" 100;
+}
+
+small {
+  font-size: $font-size-small;
 }
 
 .container {
@@ -135,4 +152,9 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 input::placeholder {
   color: #000000;
+  font-size: $font-size-base;
+}
+
+select::placeholder {
+  font-size: $font-size-base;
 }
